# DyldExtractorC

./: CMakeLists.txt
DyldExtractor/: CMakeLists.txt
DyldExtractor/Converter/: Slide.cpp
DyldExtractor/Converter/Linkedit/: MetadataGenerator.cpp  Optimizer.cpp
DyldExtractor/Converter/Linkedit/Encoder/: LegacyGenerator.cpp
DyldExtractor/Converter/Objc/: Atoms.h  Placer.cpp  Walker.cpp
DyldExtractor/Converter/Stubs/: Arm64Fixer.cpp  Arm64Fixer.h  Arm64Utils.cpp  ArmFixer.h  Fixer.cpp  Fixer.h  SymbolPointerCache.cpp
DyldExtractor/Macho/: Context.cpp  Context.h
DyldExtractor/Provider/: BindInfo.cpp  Disassembler.cpp  ExtraData.cpp  FunctionTracker.cpp  FunctionTracker.h  LinkeditTracker.cpp  PointerTracker.cpp  PointerTracker.h  SymbolTableTracker.cpp  Symbolizer.cpp  Symbolizer.h  Validator.cpp
DyldExtractor/Utils/: Architectures.h  ExtractionContext.cpp
